// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders correctly with default props and caption and credit text 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: grid;
  row-gap: 16px;
}

.emotion-1 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-2 {
  margin: 0;
  color: #6A6A6A;
  text-transform: uppercase;
  font-family: "DM Sans",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-2 svg {
  fill: #6A6A6A;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      test
    </p>
    <p
      class="emotion-2"
    >
      this is credit text
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with default props and only caption text 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: grid;
  row-gap: 16px;
}

.emotion-1 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      test
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders correctly with overriden props and caption and credit text 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: grid;
  row-gap: 64px;
}

.emotion-1 {
  margin: 0;
  color: #111111;
  font-family: "Poppins",sans-serif;
  font-size: 22px;
  line-height: 24.75px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1 svg {
  fill: #111111;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-2 {
  margin: 0;
  color: #111111;
  text-transform: uppercase;
  font-family: "DM Sans",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-2 svg {
  fill: #111111;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      test
    </p>
    <p
      class="emotion-2"
    >
      this is credit text
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders with additional HTML attributes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: grid;
  row-gap: 16px;
}

.emotion-1 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
    id="caption-id"
  >
    <p
      class="emotion-1"
    >
      test
    </p>
  </div>
</DocumentFragment>
`;
